# Algorithms_lab_sorting

./: Cargo.toml  README.md
src/: merge_sort.rs  quick_sort.rs  quick_sort_old.rs  selection_sort.rs
